compiler/test/conformance/invalid/inv_missing_arg_comma.tu
// INVÁLIDO: falta vírgula entre argumentos de chamada
fn add(a: Int, b: Int) -> Int => a + b

fn main() {
  print(add(1 2))
}
